--- a/Run-tab/style.css
+++ b/Run-tab/style.css
@@ -48,15 +48,18 @@ body {
     background: #fce138;
     padding: 40px 35px;
     width:100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
   footer h2{
-   display: inline; 
+   
    color: #024e76;
   font-size: 30px;
   margin: 0;
   }
   footer div {
-    float: right;
+    
     line-height: 1.5;
     text-align: right;
   }
@@ -70,20 +73,20 @@ body {
   /* Hero Style Start */
 .hero {
   background-image: url("https://static.fullstack-bootcamp.com/module-2/flipped-hero-image.jpg");
-  height: 600px;
+  
   background-size: cover;
-  background-position: center;
+ display: flex; 
+ justify-content: center;
+ flex-wrap: wrap;
 }
 /* Hero Style End */
 .hero-form{
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
+  
   color: #024e76;
   border:solid 3px #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
+  
 }
 .hero-form h3 {
   font-size: 24px;
@@ -249,3 +252,17 @@ body {
 }
 
 /* REACH OUT STYLES END */
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%; 
+  color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+
+}
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
