--- a/Run-tab/style.css
+++ b/Run-tab/style.css
@@ -70,7 +70,7 @@ body {
   padding: 60px;
 
   }
-  /* Hero Style Start */
+  /*  */
 .hero {
   background-image: url("https://static.fullstack-bootcamp.com/module-2/flipped-hero-image.jpg");
   
@@ -79,7 +79,7 @@ body {
  justify-content: center;
  flex-wrap: wrap;
 }
-/* Hero Style End */
+/*  */
 .hero-form{
   background-color: #fce138;
   padding: 20px;
@@ -202,23 +202,27 @@ width: 50%;
   flex:12;
 }
 .trainers {
-  
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; 
 }
 .trainer {
-  width: 900px;
-  margin: 0 auto 30px auto;
+  
+  margin:20px;
   background: #024e76;
   color: #fce138;
-  overflow: auto;
+ flex:1; 
 }
 .trainer img {
-  width: 35%;
-  float: left;
+  width: 100%;
+  
 }
 .trainer-bio {
-  padding: 35px;
-  float: left;
-  width: 65%;
+  padding: 25px;
+  
+  line-height: 1.5em;
 }
 .text-left {
   text-align: left;
@@ -228,17 +232,17 @@ width: 50%;
   text-align: right;
 }
 .trainer-bio h3 {
-  font-size: 32px;
-  margin-bottom: 8px;
+  font-size: 28px;
+  
 }
 .trainer-bio h4 {
   font-weight: lighter;
-  font-size: 26px;
-  margin-bottom: 25px;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 .trainer-bio p {
   font-size: 17px;
-  line-height: 1.3;
+  
 }
 .section-title {
   font-size: 55px;
@@ -256,15 +260,11 @@ width: 50%;
   color: #fce138;
 }
 .contact-info iframe {
-  width: 400px;
+  
   height: 400px;
 }
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
+  
   color: white;
 }
 .contact-info h3 {
@@ -274,14 +274,57 @@ width: 50%;
 .contact-info p, .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
 }
 .contact-info a {
   color: #fce138;
 }
+.contact-info{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
 
-/* REACH OUT STYLES END */
+}
+
+.contact-form input, .contact-form textarea{
+
+border: 1px solid #024e76;
+
+display: block;
+
+padding: 7px 15px;
+
+font-size: 16px;
+
+color: #024e76;
+
+width: 100%;
+
+margin-bottom: 15px;
+
+margin-top: 5px;
+}
+.contact-form button{
+  width: 100%;
+
+border: none;
+
+background: #fce138;
+
+color: #024e76;
+
+text-align: center;
+
+padding: 15px 0;
+
+font-size: 16px;
+}
+/* */
 .hero-cta {
   width: 35%;
   text-align: right;
