--- a/Run-tab/style.css
+++ b/Run-tab/style.css
@@ -39,7 +39,7 @@ body {
     list-style: none;
   }
   header nav ul li a{
-    margin:0 30px ;
+    padding:10px 15px;
     font-weight: lighter;
   font-size:1.55vw;
 
@@ -78,6 +78,7 @@ body {
  display: flex; 
  justify-content: center;
  flex-wrap: wrap;
+ align-items: flex-start;
 }
 /*  */
 .hero-form{
@@ -245,7 +246,7 @@ width: 50%;
   
 }
 .section-title {
-  font-size: 55px;
+  font-size: 48px;
   display: inline-block;
   padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
@@ -292,36 +293,22 @@ width: 50%;
 }
 
 .contact-form input, .contact-form textarea{
-
 border: 1px solid #024e76;
-
 display: block;
-
 padding: 7px 15px;
-
 font-size: 16px;
-
 color: #024e76;
-
 width: 100%;
-
 margin-bottom: 15px;
-
 margin-top: 5px;
 }
 .contact-form button{
-  width: 100%;
-
+width: 100%;
 border: none;
-
 background: #fce138;
-
 color: #024e76;
-
 text-align: center;
-
 padding: 15px 0;
-
 font-size: 16px;
 }
 /* */
@@ -331,7 +318,7 @@ font-size: 16px;
   margin: 3.5%; 
   color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 
 }
 .hero-cta h2 {
@@ -341,4 +328,146 @@ font-size: 16px;
 }
 .flex-row{
   display: flex;
+}
+
+@media screen and (max-width: 900px) {
+  a {
+    color: aquamarine;
+  }
+
+  h1 {
+    font-size: 200px;
+  }
+}
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+  }
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  footer h2, footer div {
+    text-align: center;
+    width: 100%;
+  }
+  .hero-cta, .hero-form {
+    width: 100%;
+  }
+  
+  .hero-cta {
+    text-align: center;
+  }
+  .section-title {
+    width: 80%;
+  }
+  
+  .trainer {
+    flex: 0 70%;
+  }
+  
+  .contact-info iframe{
+    flex: 1 100%;
+  }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+  header h1 {
+    /* this will be applied on any screen between 768px and 575px */
+    font-size: 80px;
+  }
+  section {
+    padding: 30px 15px;
+  }
+
+  .step h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
+
+  .step-info {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .step-img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .step-text {
+    flex: 100%;  
+  }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+  header h1 {
+    /* this will be applied on any screen smaller than 575px */
+    font-size: 100px;
+  }
+  .hero-form button {
+    width: 100%;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .trainer {
+    flex: 0 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+  .hero-form button {
+    width: 100%;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .trainer {
+    flex: 0 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+  .contact-form {
+    order: 3;
+  } 
 }
