--- a/Run-tab/style.css
+++ b/Run-tab/style.css
@@ -15,6 +15,14 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top:0;
+    background-image: url(" https://static.fullstack-bootcamp.com/module-1/hero-bg.jpg");
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+background-position: 80%;
   }
   header h1 {
     font-weight: bold;
@@ -87,7 +95,7 @@ body {
   
   color: #024e76;
   border:solid 3px #024e76;
-  
+  border-radius: 15px;
 }
 .hero-form h3 {
   font-size: 24px;
@@ -470,4 +478,105 @@ font-size: 16px;
   .contact-form {
     order: 3;
   } 
+}
+header h1 {
+  /* add alongside your existing declarations */
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a {
+  /* and here */
+}
+
+.hero-cta h2 {
+  /* and here */
+}
+.form-input {
+
+}
+
+.hero-form button {
+
+}
+
+.contact-form input, .contact-form textarea {
+
+}
+
+.contact-form button {
+
+}
+.rounded-corners {
+  -webkit-border-radius: 10px; /* old versions of chrome and safari */
+  -moz-border-radius: 10px; /* old versions of firefox */
+  border-radius: 10px; /* standardized browsers */
+}
+/* default state */
+button {
+  background: white;
+}
+
+/* mouse is hovering over button */
+button:hover {
+  background: red;
+}
+
+/* button is in focus because it was the most recently clicked element on the page */
+button:focus {
+  background: green;
+}
+
+/* user is actively pressing the cursor down on the button */
+button:active {
+  background: blue;
+}
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
+/* update existing rule with this declaration */
+.form-input {
+  background-color: rgba(255,255,255, 0.75);
+}
+
+/* create a new rule for focus state */
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+}
+.contact-form input, .contact-form textarea {
+  /* add a transparent background here */
+}
+
+/* create a new css rule for focus state */
+.contact-form input:focus, .contact-form textarea:focus {
+
+}
+.step:last-child {
+  border-bottom: 1px solid #39a6b2;
+}
+.step:nth-child(even) {
+  border-bottom: 1px solid #39a6b2;
+}  
+.step {
+  /* re-add alongside existing declarations */
+  border-bottom: 1px solid #39a6b2;
+}
+
+.step:last-child {
+  border-bottom: none;
+}
+.step:not(:last-child) {
+  border-bottom: 1px solid #39a6b2;
 }
